package floyd.raft.log;

message MetaData {
	required uint64 current_term = 1;
	required bytes voted_for_ip = 2;
	required int32 voted_for_port = 3;
}

message FileLogMetaData {
	required MetaData raft_metadata = 1;
	required uint64 entries_start = 2 [default = 1];
	required uint64 entries_end = 3 [default = 0];
}
